; ModuleID = '/home/carl/AnghaBench/reactos/hal/halx86/mp/extr_ioapic.c_EISA_ELCR_Read.c'
source_filename = "/home/carl/AnghaBench/reactos/hal/halx86/mp/extr_ioapic.c_EISA_ELCR_Read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"Broken MPtable reports ISA irq %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @EISA_ELCR_Read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @EISA_ELCR_Read(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 16
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = ashr i32 %8, 3
  %10 = add nsw i32 1232, %9
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @READ_PORT_UCHAR(i32 %11)
  %13 = load i32, i32* %3, align 4
  %14 = and i32 %13, 7
  %15 = ashr i32 %12, %14
  %16 = and i32 %15, 1
  store i32 %16, i32* %2, align 4
  br label %20

17:                                               ; preds = %1
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @DPRINT(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %18)
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %17, %7
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @READ_PORT_UCHAR(i32) #1

declare dso_local i32 @DPRINT(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
